Bug 855037 - JäegerMonkey: Check if there is an helper thread for Ion compilation. r=dvander